--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "devDependencies": {
     "browser-sync": "^2.26.13",
     "run-script-os": "^1.1.5"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1"
   }
 }
